package io.lab.design.patterns.creation.abstractfactory;


public interface Factory {

    ProductA createProductA();

    ProductB createProductB();
}
