package io.lab.design.patterns.creation.abstractfactory;


public interface ProductA {

    void check();
}
