package io.lab.design.patterns.creation.abstractfactory;


public interface ProductB {

    void execute();
}
